syntax = "proto3";

package deadline;

option java_package = "com.example.proto.deadline";
option java_multiple_files = true;

message DeadlineRequest {
    string name = 1;
}

message DeadlineResponse {
    string name = 1;
}

service DeadlineService {
    rpc deadlineMethod(DeadlineRequest) returns (DeadlineResponse);
}